@startuml System Class Diagram

enum Role {
    STUDENT
    TEACHER
    ADMIN
}

enum Gender {
    MALE
    FEMALE
    OTHER
}

enum Theme {
    LIGHT
    DARK
}

enum Language {
    EN
    VI
}

entity User {
    + id : UUID <PK>
    --
    - username : String <unique> 
    - email : String <unique>
    - password : String

    - role : Role
    
    - createdAt : Date
    - updatedAt : Date

    - isActive : Boolean
    - emailVerified : Boolean
    - lastLoginAt : Date
}

entity UserProfile {
    + id : UUID <PK>
    --
    + userId : UUID <FK>
    --
    - firstName : String?
    - lastName : String?

    - phoneNumber : String?
    - address : String?
    - city : String?
    - country : String?

    - dateOfBirth : Date?
    - gender : Gender?
    
    - avatarUrl : String?
    - bio : String?

    - createdAt : Date
    - updatedAt : Date
}

User ||--|| UserProfile : "has"

entity UserSetting {
    + id : UUID <PK>
    --
    + userId : UUID <FK>
    --
    - theme : Theme
    - language : Language

    - emailNotificationEnabled : Boolean
    - pushNotificationEnabled : Boolean

    - createdAt : Date
    - updatedAt : Date
}

User ||--|| UserSetting : "has"

entity Category {
    + id : UUID <PK>
    --
    - name : String <unique>

    - description : String

    - createdAt : Date
    - updatedAt : Date
}

entity Document {
    + id : UUID <PK>
    --
    + userId : UUID <FK>
    + categoryId : UUID <FK>
    --
    - title : String
    - description : String?

    - createdAt : Date
    - updatedAt : Date

    - bookmarkCount : int
    - downloadCount : int

    - ratingSum : int
    - ratingCount : int
    - averageRating : float
}

User |o--o{ Document : "owns"
Category ||--o{ Document : "contains"

entity Bookmark {
    + id : UUID <PK>
    --
    + documentId : UUID <FK>
    + userId : UUID <FK>
    --
    - createdAt : Date
}

Document ||--o{ Bookmark : "has"
User ||--o{ Bookmark : "has"

entity Comment {
    + id : UUID <PK>
    --
    + documentId : UUID <FK>
    + userId : UUID <FK>
    ' Self-referencing relationship for threaded comments
    + parentCommentId : UUID <FK>?
    --
    - content : String

    - createdAt : Date
    - updatedAt : Date
}

Comment ||--o{ Comment : "has replies"
Document ||--o{ Comment : "has"
User ||--o{ Comment : "has"

entity Rating {
    + id : UUID <PK>
    --
    + documentId : UUID <FK> <unique>
    + userId : UUID <FK> <unique>
    --
    - score : int

    - createdAt : Date
    - updatedAt : Date
}

Document ||--o{ Rating : "has"
User ||--o{ Rating : "has"

entity File {
    + id : UUID <PK>
    --
    + documentId : UUID <FK>
    --
    - name : String
    - type : String
    - size : int

    - objectKey : String
    - url : String

    - createdAt : Date
    - updatedAt : Date
}

Document ||--o{ File : "has"

@enduml